--- a/pom.xml
+++ b/pom.xml
@@ -26,15 +26,25 @@
       </plugins>
    </build>
    <dependencies>
-      <dependency>
-         <groupId>org.glassfish.jersey.core</groupId>
-         <artifactId>jersey-server</artifactId>
-         <version>2.20</version>
-      </dependency>
-      <dependency>
-         <groupId>org.glassfish.jersey.containers</groupId>
-         <artifactId>jersey-container-servlet</artifactId>
-         <version>2.20</version>
-      </dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>2.20</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>2.20</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
    </dependencies>
 </project>
